[Presentation API] fire onconnectionavailable and onconnect event asynchronously

We would like to ensure following execution order when calling PresentationRequest.start():

1. resolve start() promise
2. fire PresentationRequest onconnectionavailable event
3. fire PresentationConnection onconnect event

To fire event after resolving promise, we need to dispatch events asynchronously

BUG=669213

Review-Url: https://codereview.chromium.org/2547143002
Cr-Commit-Position: refs/heads/master@{#437598}

Former-commit-id: 4e188d7c91feaff452f8cf8c93ac48a4393b8e5b